<resources>
    <string name="app_name">ClubMobile</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_invalid_first_name">This first name is invalid</string>
    <string name="error_invalid_last_name">This last name is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_find_club">FindClubActivity</string>
    <string name="leave_club">Leave club</string>
    <string name="register">Register</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="my_clubs">My clubs</string>
    <string name="find_club">Find club</string>
    <string name="logout">Logout</string>
    <string name="or">OR</string>
    <string name="error_invalid_radford_email">Must use school email (radford.edu)</string>
    <string name="hyphen">-</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="create_announcement">Create announcement</string>
    <string name="default_channel">default</string>
</resources>
